# BasicStlViewer

./: .gitignore  README.md  pyproject.toml
config/: gui.toml
src/stlviewer/: __main__.py  config.py
src/stlviewer/gui/: main.py  viewer.py
